--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <li><a class="dropdown-item" href="namaz magrib.html">maghrib</a></li>
             <li><a class="dropdown-item" href="namaz isha.html">isha</a></li>
             <li><a class="dropdown-item" href="namaz witr.html">witr</a></li>
-            <li><a class="dropdown-item" href="namaz tahajjud.html">tahajut</a></li>
+            <li><a class="dropdown-item" href="namaz tahajjud.html">Tahajjud</a></li>
             <li><a class="dropdown-item" href="namaz jumma.html">jummah</a></li>
             <li><a class="dropdown-item" href="namaz Istikhara.html">al-Istikhara</a></li>
             <li><a class="dropdown-item" href="namaz eid.html">eid</a></li>
