--- a/99names.html
+++ b/99names.html
@@ -406,7 +406,7 @@
       </tr>
       <tr>
         <th scope="row">59</th>
-        <td class="th">ٱلْمُعِيدُ</td>td>
+        <td class="th">ٱلْمُعِيدُ</td>
         <td class="th">AL-MUEED</td>
         <td class="th">	The Restorer, The Reinstater</td>
       </tr>
