--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <img src="main/99nameslogo.png" class="w-100" alt="...">
     </div>
     <div class="col-md-5 p-5 ps-md-0">
-      <h5 class="mt-0">99names of allah</h5>
+      <h5 class="mt-0">99names of allah and Prophet Muhammad ﷺ </h5>
       <p>The 99 Names of God (Allah) according to the tradition of Islam like:</p>
       <li>Ar Rahman (The All Merciful)</li>
       <li>Ar Rahim (The Most Merciful)</li>
