--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <div class="row g-3 bg-body-secondary position-relative">
     <div class="col-md-6 mb-md-1 p-md-5">
-      <img src="main/99nameslogo.png" class="w-100" alt="...">
+      <img src="main/99names.png" class="w-100" alt="...">
     </div>
     <div class="col-md-5 p-5 ps-md-0">
       <h5 class="mt-0">99names of allah and Prophet Muhammad ﷺ </h5>
