--- a/q.html
+++ b/q.html
@@ -154,6 +154,9 @@
         <div id="5" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
           <div class="accordion-body">
               Ans:<p>It is mentioned in several hadith that Jinns eat the following 3 things </p>
+              <li>Bones, especially the bones upon which Allah’s name has not been mentioned.</li>
+              <li>Animal dung, every drop of dried animal dung.</li>
+              <li>Charcoal, which is used for Istinja.</li>
           </div>
         </div>
       </div>
