--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
   
   <div class="footer2">
     <h2 class="heading">Assalamualekum</h2>
-    <h6>My name is Aadil khan i made this website for educational purpose, specially for those people who want to explore Islam and wants to learn about Islam.</h6>
+    <h6>i made this website for educational purpose, specially for those people who want to explore Islam and wants to learn about Islam.</h6>
     <h6>if you get any type of problem from this website </h6>
    
   </div>
